modified:   WebBook3.html 	modified:   WebBook3ch1.html 	modified:   WebBook3ch2.html 	modified:   WebBook3li1.html

--- a/WebBook3ch1.html
+++ b/WebBook3ch1.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-05 17:20:00"> 
+<meta name="date" content="2016-04-06 16:00:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -1367,7 +1367,8 @@ class="cmbx-10x-x-109">Problem 2</span>
 <!--l. 613--><p class="noindent" >a) In a jupyter notebook, write python functions to convert induction, moment
 and magnetic field quantities in cgs units to SI units. Use the conversion factors
 in Table&#x00A0;<a 
-href="#x3-100041">1.1<!--tex4ht:ref: tab:units --></a>. Use your program to convert the following:
+href="#x3-100041">1.1<!--tex4ht:ref: tab:units --></a>. Use your function to convert the following from cgs to
+SI:
 <!--l. 615--><p class="noindent" >i) B = 3.5 x10<sup><span 
 class="cmr-8">5</span></sup> G
 <!--l. 617--><p class="noindent" >ii) m = 2.78 x 10<sup><span 
