Fixed Chapgd Chapter 7 figures

--- a/WebBook3ch4.html
+++ b/WebBook3ch4.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-07 15:28:00"> 
+<meta name="date" content="2016-04-18 16:03:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -910,13 +910,12 @@ class="cmmi-8">a</span></sub> + <span
 class="cmmi-10x-x-109">N</span><sub><span 
 class="cmmi-8">b</span></sub> + <span 
 class="cmmi-10x-x-109">N</span><sub><span 
-class="cmmi-8">c</span></sub> = 1 (in SI; in
-cgs units the sum is 4<span 
+class="cmmi-8">c</span></sub> = 1 (in SI; in cgs
+units the sum is 4<span 
 class="cmmi-10x-x-109">&#x03C0;</span>). For a long needle-like particle, <span 
 class="cmmi-10x-x-109">N</span><sub><span 
 class="cmmi-8">a</span></sub> <span 
-class="cmsy-10x-x-109">&#x2243; </span>0 and
-<span 
+class="cmsy-10x-x-109">&#x2243; </span>0 and <span 
 class="cmmi-10x-x-109">N</span><sub><span 
 class="cmmi-8">b</span></sub> = <span 
 class="cmmi-10x-x-109">N</span><sub><span 
@@ -924,8 +923,8 @@ class="cmmi-8">c</span></sub> <span
 class="cmsy-10x-x-109">&#x2243;</span> <span 
 class="cmr-8">1</span> 
 <span 
-class="cmr-8">2</span>. A useful approximation for nearly spherical particles is
-<span 
+class="cmr-8">2</span>. A
+useful approximation for nearly spherical particles is <span 
 class="cmmi-10x-x-109">N</span><sub><span 
 class="cmmi-8">a</span></sub> = <span 
 class="cmr-8">1</span> 
@@ -942,11 +941,12 @@ class="cmmi-8">a</span> <span
 class="cmsy-10x-x-109">-</span> <span 
 class="cmmi-8">c</span> 
 <span 
-class="cmmi-8">a</span>)]  (Stacey and Banerjee, 1974). For more spheroids, see
-Nagata (1961, p. 70) and for the general case, see  Dunlop and Özdemir (1997).
-In the absence of an external field, the magnetization will be parallel
-to the long axis (<span 
-class="cmmi-10x-x-109">&#x03B8; </span>= 0) and the magnetostatic energy density is given
+class="cmmi-8">a</span>)]
+(Stacey and Banerjee, 1974). For more spheroids, see  Nagata (1961, p. 70) and
+for the general case, see  Dunlop and Özdemir (1997). In the absence of an
+external field, the magnetization will be parallel to the long axis (<span 
+class="cmmi-10x-x-109">&#x03B8; </span>= 0) and the
+magnetostatic energy density (also known as the &#8216;self&#8217; energy is given
 by:
 <table 
 class="equation"><tr><td>
@@ -1632,9 +1632,11 @@ class="cmsy-8">-</span><span
 class="cmr-8">1</span></sup> and using
 values for other parameters from the text, write a Python program to calculate
 the following:
-<!--l. 560--><p class="noindent" >a) Self energy for a sphere 1, 10 and 100 <span 
-class="cmmi-10x-x-109">&#x03BC;</span>m in diameter. [Note that the
-&#8220;energies&#8221; in the text are energy densities or energy/unit volume.]
+<!--l. 560--><p class="noindent" >a) Self energy (or magnetostatic energy) for a sphere 1, 10 and 100 <span 
+class="cmmi-10x-x-109">&#x03BC;</span>m in
+diameter. [Hint: see Equation&#x00A0;<a 
+href="#x6-36004r7">4.7<!--tex4ht:ref: eq:self --></a> in the text for the &#8216;self&#8217; energy density. Also,
+remember the difference between energy and energy density!]
 <!--l. 562--><p class="noindent" >b) Magnetostatic (shape) anisotropy energy for an ellipsoid whose principal
 semi-axis is 1 <span 
 class="cmmi-10x-x-109">&#x03BC;</span>m and whose major and minor semi-axes are each 0.25 <span 
