modified:   WebBook3ch9.html

--- a/WebBook3ch9.html
+++ b/WebBook3ch9.html
@@ -1283,7 +1283,7 @@ class="cmbx-10x-x-109">zeq.py</span>. [Hint: check the help message by typing
 <span 
 class="cmbx-10x-x-109">zeq.py -h </span>on the command line to figure out how...]. This can be done either
 from the command line or from within a jupyter notebook (remember that to run
-a command line program, you use the syntax:
+a command line program, you use the syntax):
                                                                      
 
                                                                      
