modified:   WebBook3ch9.html

--- a/WebBook3ch9.html
+++ b/WebBook3ch9.html
@@ -1318,7 +1318,7 @@ years?
 <!--l. 791--><p class="noindent" >c) Run <span 
 class="cmbx-10x-x-109">zeq.py </span>again, this time setting the -beg and -end flags to calculate
 best-fit lines through the two components and a great circle through all the data
-(leaving out the NRM step). Display these new images in your notebook. In
+except the NRM and the last steps. Display these new images in your notebook. In
 a markdown code block explain which interpretation makes the most
 sense?
 <!--l. 795--><p class="noindent" ><span 
