Fixed Chapter 9 problems again

--- a/WebBook3ap1.html
+++ b/WebBook3ap1.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-20 20:31:00"> 
+<meta name="date" content="2016-04-20 22:44:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -1900,7 +1900,7 @@ id="TBL-19-13"></colgroup>
 
                                                                      
 <tr  
- style="vertical-align:baseline;" id="TBL-19-1-"><td colspan="8" style="white-space:nowrap; text-align:left;" id="TBL-19-1-1"  
+ style="vertical-align:baseline;" id="TBL-19-1-"><td colspan="11" style="white-space:nowrap; text-align:left;" id="TBL-19-1-1"  
 class="td11"></td> <div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
 ><span class="id">Table&#x00A0;A.4:   </span><span  
 class="content">Finite   rotations   for   selected   Gondwana
@@ -2989,8 +2989,8 @@ id="TBL-20-8"><col
 id="TBL-20-9"><col 
 id="TBL-20-10"></colgroup>
 <tr  
- style="vertical-align:baseline;" id="TBL-20-1-"><td colspan="8" style="white-space:nowrap; text-align:left;" id="TBL-20-1-1"  
-class="td11"></td><div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
+ style="vertical-align:baseline;" id="TBL-20-1-"><td colspan="10" style="white-space:nowrap; text-align:center;" id="TBL-20-1-1"  
+class="td11"><div class="multicolumn"  style="white-space:nowrap; text-align:center;">  <div class="caption" 
 ><span class="id">Table&#x00A0;A.5:   </span><span  
 class="content">Finite   rotations   for   selected   Laurentian
 continents.   Rotates   continent   to   South   African   fixed
@@ -2998,7 +2998,7 @@ coordinates.  EUR:  Europe;  NAM:  North  America;  GRN:
 Greenland.  [Rotations  of  Torsvik  et  al.  (2008)  -  see  for
 additional data.] </span></div><!--tex4ht:label?: x19-218009r5 -->                                                         </div><a 
  id="x19-218010"></a>
-</tr><tr 
+</td></tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-20-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-20-2-1"  
 class="td11">Age</td><td  style="white-space:nowrap; text-align:left;" id="TBL-20-2-2"  
