--- a/WebBook3ch11.html
+++ b/WebBook3ch11.html
@@ -1970,12 +1970,12 @@ class="cmmi-10x-x-109">F </span>test
 for common mean with the data in <span 
 class="cmti-10x-x-109">prob1a.dat</span>? Check your answer using the
 program <span 
-class="cmbx-10x-x-109">watsonsF.py</span>.
+class="cmbx-10x-x-109">watsons_f.py</span>.
 <!--l. 1049--><p class="noindent" >e) An alternative method for testing for common mean with less restrictive
 assumptions uses Watson&#8217;s statistic <span 
 class="cmmi-10x-x-109">V</span> <sub><span 
 class="cmmi-8">w</span></sub>. Use the program <span 
-class="cmbx-10x-x-109">watsonsV.py </span>to test
+class="cmbx-10x-x-109">watsons_v.py </span>to test
 <span 
 class="cmti-10x-x-109">prob1a.dat </span>against <span 
 class="cmti-10x-x-109">prob1c.dat </span>and <span 
