Fixed Chapter 13 problems

--- a/WebBook3ch11.html
+++ b/WebBook3ch11.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-20 22:44:00"> 
+<meta name="date" content="2016-05-18 17:05:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -1970,12 +1970,14 @@ class="cmmi-10x-x-109">F </span>test
 for common mean with the data in <span 
 class="cmti-10x-x-109">prob1a.dat</span>? Check your answer using the
 program <span 
-class="cmbx-10x-x-109">watsons_f.py</span>.
+class="cmbx-10x-x-109">watsons</span><span 
+class="cmbx-10x-x-109">_f.py</span>.
 <!--l. 1049--><p class="noindent" >e) An alternative method for testing for common mean with less restrictive
 assumptions uses Watson&#8217;s statistic <span 
 class="cmmi-10x-x-109">V</span> <sub><span 
 class="cmmi-8">w</span></sub>. Use the program <span 
-class="cmbx-10x-x-109">watsons_v.py </span>to test
+class="cmbx-10x-x-109">watsons</span><span 
+class="cmbx-10x-x-109">_v.py </span>to test
 <span 
 class="cmti-10x-x-109">prob1a.dat </span>against <span 
 class="cmti-10x-x-109">prob1c.dat </span>and <span 
