--- a/WebBook3ch2.html
+++ b/WebBook3ch2.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-20 22:44:00"> 
+<meta name="date" content="2016-05-18 17:05:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -1514,7 +1514,7 @@ Notebooks folder of the Essentials_Examples folder described in Chapter
 class="cmbx-10x-x-109">Problem 1</span>
 <!--l. 715--><p class="noindent" >a) Write a python script in an Jupyter notebook that converts declination,
 inclination and intensity to North, East, and Down. Read in the data from the
-Chapter_2 example data in the data&#x02D9;files/Essentials_Examples/Chapter_2 folder
+Chapter_2 example data in the data_files/Essentials_Examples/Chapter_2 folder
 that is part of the PmagPy software distribution and run them through your
 function. For this the <span 
 class="cmbx-10x-x-109">loadtxt </span>function in the Numpy module will come in
