--- a/WebBook3ch8.html
+++ b/WebBook3ch8.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-20 22:44:00"> 
+<meta name="date" content="2016-05-18 17:05:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -635,8 +635,7 @@ applied in the coil on the right induces a current in the left-hand coil. This
 induces a magnetization in the specimen shown in b), which in turn offsets
 the current in the coil to the right. The offset is proportional to the magnetic
 susceptibility of the specimen. [Modified from Genevieve Tauxe animation
-at: <a 
-href="http://magician.ucsd.edu/Lab_tour/movs/isosuscp.mov" >http://magician.ucsd.edu/Lab&#x02D9;tour/movs/isosuscp.mov</a>.] </span></div><!--tex4ht:label?: x10-820014 -->
+at: http://magician.ucsd.edu/Lab_tour/movs/isosuscp.mov.] </span></div><!--tex4ht:label?: x10-820014 -->
                                                                      
 
                                                                      
