--- a/WebBook3ch9.html
+++ b/WebBook3ch9.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-04-20 22:44:00"> 
+<meta name="date" content="2016-05-18 17:05:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -1353,7 +1353,8 @@ href="WebBook3ap2.html#x20-230000B.1.3">B.1.3<!--tex4ht:ref: app:eqtilt --></a> 
 thereof), determine the &#8220;structurally corrected&#8221; direction of NRM that results
 from restoring the strata to horizontal.
 <!--l. 815--><p class="noindent" >Check your answer with the program <span 
-class="cmbx-10x-x-109">di&#x02D9;tilt.py</span>
+class="cmbx-10x-x-109">di</span><span 
+class="cmbx-10x-x-109">_tilt.py</span>
 <!--l. 817--><p class="noindent" >b) Now try the same problem using the pmagpy.pmag function dotilt() in a
 Jupyter notebook.
 <!--l. 821--><p class="noindent" ><span 
