Fixed Chapter 11 problem sets

--- a/WebBook3ch12.html
+++ b/WebBook3ch12.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-05-21 12:07:00"> 
+<meta name="date" content="2016-05-24 15:10:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -857,7 +857,7 @@ class="cmbx-10x-x-109">eqarea</span><span
 class="cmbx-10x-x-109">_ell.py</span>.
 <!--l. 488--><p class="noindent" >c) Now test whether or not the two modes in the data are antipodal. Use
 <span 
-class="cmbx-10x-x-109">watsonsV.py </span>and <span 
+class="cmbx-10x-x-109">watsons_v.py </span>and <span 
 class="cmbx-10x-x-109">revtest.py </span>to test whether the data pass a reversals test. Do
 the data pass? Watson&#8217;s <span 
 class="cmmi-10x-x-109">V</span> <sub><span 
