--- a/WebBook3ch16.html
+++ b/WebBook3ch16.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-05-21 12:07:00"> 
+<meta name="date" content="2016-05-24 15:10:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -956,13 +956,13 @@ id="TBL-16-14"><col
 id="TBL-16-15"><col 
 id="TBL-16-16"></colgroup><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-1-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-1-1"  
-class="td11">                            <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Gondwana Continents:</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-1-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-1-1"  
+class="td11"></td>                            <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Gondwana Continents:</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-2-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-2-1"  
-class="td11">              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-2-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-2-1"  
+class="td11"></td>              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-16-3-"><td  style="white-space:nowrap; text-align:right;" id="TBL-16-3-1"  
 class="td11">  </td><td  style="white-space:nowrap; text-align:right;" id="TBL-16-3-2"  
@@ -1047,9 +1047,9 @@ class="td11"> </td><td  style="white-space:nowrap; text-align:right;" id="TBL-16
 class="td11"></td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-7-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-7-1"  
-class="td11">                    <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A-2: van der Voo and French (1974)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-7-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-7-1"  
+class="td11"></td>                    <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A-2: van der Voo and French (1974)</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-16-8-"><td  style="white-space:nowrap; text-align:right;" id="TBL-16-8-1"  
 class="td11"> 1</td><td  style="white-space:nowrap; text-align:right;" id="TBL-16-8-2"  
@@ -1105,9 +1105,9 @@ class="td11">   -1</td><td  style="white-space:nowrap; text-align:right;" id="TB
 class="td11">-20</td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-11-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-11-1"  
-class="td11">                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-11-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-11-1"  
+class="td11"></td>                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-16-12-"><td  style="white-space:nowrap; text-align:right;" id="TBL-16-12-1"  
 class="td11"> 1</td><td  style="white-space:nowrap; text-align:right;" id="TBL-16-12-2"  
@@ -1163,13 +1163,13 @@ class="td11"> 147</td><td  style="white-space:nowrap; text-align:right;" id="TBL
 class="td11"> 50</td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-15-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-15-1"  
-class="td11">                             <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Laurasian Continents:</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-15-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-15-1"  
+class="td11"></td>                             <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Laurasian Continents:</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-16-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-16-1"  
-class="td11">              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-16-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-16-1"  
+class="td11"></td>              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-16-17-"><td  style="white-space:nowrap; text-align:right;" id="TBL-16-17-1"  
 class="td11">  </td><td  style="white-space:nowrap; text-align:right;" id="TBL-16-17-2"  
@@ -1270,9 +1270,9 @@ class="td11">    </td><td  style="white-space:nowrap; text-align:right;" id="TBL
 class="td11">   </td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-16-22-"><td colspan="16" style="white-space:nowrap; text-align:center;" id="TBL-16-22-1"  
-class="td11">                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
-</td></tr><tr 
+ style="vertical-align:baseline;" id="TBL-16-22-"><td colspan="3" style="white-space:nowrap; text-align:right;" id="TBL-16-22-1"  
+class="td11"></td>                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-16-23-"><td  style="white-space:nowrap; text-align:right;" id="TBL-16-23-1"  
