--- a/WebBook3ch15.html
+++ b/WebBook3ch15.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2016-05-21 12:07:00"> 
+<meta name="date" content="2016-05-24 15:10:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -725,8 +725,8 @@ id="TBL-14-2"></colgroup><colgroup id="TBL-14-3g"><col
 id="TBL-14-3"><col 
 id="TBL-14-4"></colgroup>
 <tr  
- style="vertical-align:baseline;" id="TBL-14-1-"><td colspan="4" style="white-space:nowrap; text-align:center;" id="TBL-14-1-1"  
-class="td11">    <div class="multicolumn"  style="white-space:nowrap; text-align:center;"> <div class="caption" 
+ style="vertical-align:baseline;" id="TBL-14-1-"><td colspan="3" style="white-space:nowrap; text-align:left;" id="TBL-14-1-1"  
+class="td11"></td>    <div class="multicolumn"  style="white-space:nowrap; text-align:center;"> <div class="caption" 
 ><span class="id">Table&#x00A0;15.1:  </span><span  
 class="content">Composite  GPTS  of  Gee  and  Kent  (2007).
 <sup><span 
@@ -735,7 +735,7 @@ interval   contains   former   cryptochrons   that   have   been
 designated  by  Gee  and  Kent  (2007)  as  new  polarity
 sub-chrons. </span></div><!--tex4ht:label?: x17-193001r1 -->                                                               </div>       <a 
  id="x17-193002"></a>
-</td></tr><tr 
+</tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
  style="vertical-align:baseline;" id="TBL-14-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-14-2-1"  
 class="td11">Age range (Ma)</td><td  style="white-space:nowrap; text-align:left;" id="TBL-14-2-2"  
