--- a/WebBook3ch16.html
+++ b/WebBook3ch16.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2018-07-22 15:54:00"> 
+<meta name="date" content="2018-10-04 21:54:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -956,11 +956,11 @@ id="TBL-13-14"><col
 id="TBL-13-15"><col 
 id="TBL-13-16"></colgroup><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-1-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-1-1"  
+ style="vertical-align:baseline;" id="TBL-13-1-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-1-1"  
 class="td11"></td>                            <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Gondwana Continents:</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-2-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-2-1"  
+ style="vertical-align:baseline;" id="TBL-13-2-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-2-1"  
 class="td11"></td>              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
@@ -1047,7 +1047,7 @@ class="td11"> </td><td  style="white-space:nowrap; text-align:right;" id="TBL-13
 class="td11"></td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-7-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-7-1"  
+ style="vertical-align:baseline;" id="TBL-13-7-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-7-1"  
 class="td11"></td>                    <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A-2: van der Voo and French (1974)</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
@@ -1105,7 +1105,7 @@ class="td11">   -1</td><td  style="white-space:nowrap; text-align:right;" id="TB
 class="td11">-20</td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-11-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-11-1"  
+ style="vertical-align:baseline;" id="TBL-13-11-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-11-1"  
 class="td11"></td>                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
@@ -1163,11 +1163,11 @@ class="td11"> 147</td><td  style="white-space:nowrap; text-align:right;" id="TBL
 class="td11"> 50</td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-15-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-15-1"  
+ style="vertical-align:baseline;" id="TBL-13-15-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-15-1"  
 class="td11"></td>                             <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Laurasian Continents:</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-16-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-16-1"  
+ style="vertical-align:baseline;" id="TBL-13-16-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-16-1"  
 class="td11"></td>              <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea A: Bullard et al. (1965), Smith and Hallam (1970)</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
@@ -1270,7 +1270,7 @@ class="td11">    </td><td  style="white-space:nowrap; text-align:right;" id="TBL
 class="td11">   </td>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr  
- style="vertical-align:baseline;" id="TBL-13-22-"><td colspan="6" style="white-space:nowrap; text-align:right;" id="TBL-13-22-1"  
+ style="vertical-align:baseline;" id="TBL-13-22-"><td colspan="9" style="white-space:nowrap; text-align:right;" id="TBL-13-22-1"  
 class="td11"></td>                       <div class="multicolumn"  style="white-space:nowrap; text-align:center;">Pangea B: Morel and Irving (1981)</div>
 </tr><tr 
 class="hline"><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td><td><hr></td></tr><tr 
@@ -2095,7 +2095,8 @@ class="cmbx-10x-x-109">_pole( )</span>
 function in the <span 
 class="cmbx-10x-x-109">pmagpy.frp </span>module.
 <!--l. 781--><p class="noindent" >b) Use the function <span 
-class="cmbx-10x-x-109">pmag.PTrot( ) </span>to transform the North American pole to
+class="cmbx-10x-x-109">pmag.pt</span><span 
+class="cmbx-10x-x-109">_rott( ) </span>to transform the North American pole to
 South African coordinates using the method outlined in the Appendix. The
 North American pole for 90 Ma in BC02 is <span 
 class="cmmi-10x-x-109">&#x03BB; </span>= 75<span 
@@ -2152,7 +2153,8 @@ class="cmbx-10x-x-109">_duplicates </span>method of
 class="cmbx-10x-x-109">Pandas</span>.
 <!--l. 800--><p class="noindent" >c) Put the pole latitudes and longitudes into form that you can use with
 <span 
-class="cmbx-10x-x-109">pmag.PTrot( ) </span>to rotate these to North American coordinates for 100 Ma. Get
+class="cmbx-10x-x-109">pmag.pt</span><span 
+class="cmbx-10x-x-109">_rot( ) </span>to rotate these to North American coordinates for 100 Ma. Get
 the poles of rotation from the <span 
 class="cmbx-10x-x-109">frp.get</span><span 
 class="cmbx-10x-x-109">_pole( ) </span>function (or in Appendix A.3.5).
@@ -2170,11 +2172,13 @@ class="cmbx-10x-x-109">continents.get</span><span
 class="cmbx-10x-x-109">_continent </span>in the <span 
 class="cmbx-10x-x-109">pmagpy.continents </span>module along with
 the <span 
-class="cmbx-10x-x-109">pmagplotlib.plotMAP( ) </span>function. You will of course also need
+class="cmbx-10x-x-109">pmagplotlib.plot</span><span 
+class="cmbx-10x-x-109">_map( ) </span>function. You will of course also need
 <span 
 class="cmbx-10x-x-109">frp.get</span><span 
 class="cmbx-10x-x-109">_pole( ) </span>and <span 
-class="cmbx-10x-x-109">pmag.pmag.PTrot( )</span>. Select the European, North
+class="cmbx-10x-x-109">pmag.pmag.pt</span><span 
+class="cmbx-10x-x-109">_rot( )</span>. Select the European, North
 American, African, South American, Indian, Australian and Antarctic
 continents.
                                                                      
