--- a/WebBook3ch2.html
+++ b/WebBook3ch2.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.tug.org/tex4ht/)"> 
 <!-- html,2,sections+ --> 
 <meta name="src" content="WebBook3.tex"> 
-<meta name="date" content="2018-07-22 15:54:00"> 
+<meta name="date" content="2018-10-04 21:54:00"> 
 <link rel="stylesheet" type="text/css" href="WebBook3.css"> 
 </head><body 
 >
@@ -1510,11 +1510,8 @@ import&#x00A0;pmagpy.pmag&#x00A0;as&#x00A0;pmag
 </div>
 <!--l. 714--><p class="nopar" >
 <!--l. 716--><p class="noindent" >Please consult the Jupyter notebook <span 
-class="cmti-10x-x-109">data</span><span 
-class="cmti-10x-x-109">_files/notebooks/</span><span 
-class="cmti-10x-x-109">_PmagPy</span><span 
-class="cmti-10x-x-109">_nb.ipynb </span>for
-more help on using PmagPy functions within a notebook.
+class="cmti-10x-x-109">PmagPy.ipynb </span>for more help on using
+PmagPy functions within a notebook.
 <!--l. 719--><p class="noindent" ><span 
 class="cmbx-10x-x-109">Problem 1</span>
 <!--l. 722--><p class="noindent" >a) Write a python script in an Jupyter notebook that converts declination,
