modified:   WebBook3.html

--- a/WebBook3.html
+++ b/WebBook3.html
@@ -18545,7 +18545,7 @@ include:
 </p><!--l. 198--><p class="noindent" >
      </p><ol  class="enumerate1" >
      <li 
-  class="enumerate" id="x1-132002x1">uncertainty in the measurement caused by instrument noise or sample
+  class="enumerate" id="x1-132002x1">uncertainty in the measurement caused by instrument noise or specimen
      alignment errors,
      </li>
      <li 
